add new login web app, minor fix main activity

--- a/erp/src/main/res/layout/activity_main.xml
+++ b/erp/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="18dp"
-            android:background="@null"
+            android:background="?attr/selectableItemBackground"
             android:contentDescription="@string/tombol_menu"
             android:minWidth="48dp"
             android:minHeight="48dp"
@@ -42,6 +42,18 @@
             app:layout_constraintStart_toEndOf="@+id/show"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/img_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="18dp"
+            app:layout_constraintBottom_toTopOf="@+id/ll_body"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:riv_corner_radius="8dp"
+            tools:src="@drawable/ic_profile" />
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/ll_body"
             android:layout_width="match_parent"
@@ -62,6 +74,66 @@
             </androidx.core.widget.NestedScrollView>
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+        <com.github.clans.fab.FloatingActionMenu
+            android:id="@+id/menu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:menu_animationDelayPerItem="50"
+            app:menu_backgroundColor="#80757575"
+            app:menu_buttonSpacing="0dp"
+            app:menu_colorNormal="@color/secondaryColor"
+            app:menu_colorPressed="@color/secondaryDarkColor"
+            app:menu_colorRipple="@color/secondaryColor"
+            app:menu_fab_size="normal"
+            app:menu_icon="@drawable/ic_scan_qr"
+            app:menu_labels_colorNormal="@color/primaryDarkColor"
+            app:menu_labels_cornerRadius="8dp"
+            app:menu_labels_ellipsize="none"
+            app:menu_labels_hideAnimation="@anim/fab_scale_down"
+            app:menu_labels_margin="0dp"
+            app:menu_labels_maxLines="-1"
+            app:menu_labels_padding="8dp"
+            app:menu_labels_position="left"
+            app:menu_labels_showAnimation="@anim/fab_scale_up"
+            app:menu_labels_showShadow="true"
+            app:menu_labels_singleLine="false"
+            app:menu_labels_textColor="#FFFFFF"
+            app:menu_labels_textSize="14sp"
+            app:menu_openDirection="up"
+            app:menu_shadowColor="#66000000"
+            app:menu_shadowRadius="4dp"
+            app:menu_shadowXOffset="1dp"
+            app:menu_shadowYOffset="3dp"
+            app:menu_showShadow="true">
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/fab_web_app"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_internet"
+                app:fab_colorNormal="@color/primaryColor"
+                app:fab_colorPressed="@color/primaryDarkColor"
+                app:fab_label="@string/login_webapp"
+                app:fab_size="normal" />
+
+            <!--            <com.github.clans.fab.FloatingActionButton-->
+            <!--                android:id="@+id/fab_presensi"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:src="@drawable/ic_calendar"-->
+            <!--                android:tint="@color/white"-->
+            <!--                app:fab_colorNormal="@color/primaryColor"-->
+            <!--                app:fab_colorPressed="@color/primaryDarkColor"-->
+            <!--                app:fab_label="@string/presensi"-->
+            <!--                app:fab_size="normal" />-->
+
+        </com.github.clans.fab.FloatingActionMenu>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
