--- a/erp/src/main/res/layout/activity_login.xml
+++ b/erp/src/main/res/layout/activity_login.xml
@@ -68,12 +68,12 @@
             android:layout_marginTop="16dp"
             app:p_arrowVisible="false"
             app:p_backgroundTint="@color/primaryColor"
-            app:p_bgColor="@color/colorSecondary"
+            app:p_bgColor="@color/primaryLightColor"
             app:p_cornerRadius="5dp"
             app:p_layoutDirection="ltr"
             app:p_progressBGColor="@color/primaryColor"
-            app:p_progressColor="@color/primaryDarkColor"
-            app:p_rippleColor="@color/primaryDarkColor"
+            app:p_progressColor="@color/primaryLightColor"
+            app:p_rippleColor="@color/primaryLightColor"
             app:p_style="circleBar"
             app:p_text="@string/btn_login"
             app:p_textColor="@color/white"
