--- a/erp/src/main/res/values/colors.xml
+++ b/erp/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-  <color name="primaryColor">#28d3d7</color>
-  <color name="primaryLightColor">#71ffff</color>
-  <color name="primaryDarkColor">#00a1a6</color>
+  <color name="primaryColor">#00a1a6</color>
+  <color name="primaryLightColor">#57d3d7</color>
+  <color name="primaryDarkColor">#007277</color>
   <color name="secondaryColor">#d72c28</color>
   <color name="secondaryLightColor">#ff6452</color>
   <color name="secondaryDarkColor">#9d0000</color>
