--- a/erp/src/main/res/layout/item_admin.xml
+++ b/erp/src/main/res/layout/item_admin.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
-    android:background="?android:attr/selectableItemBackground"
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardBackgroundColor="@color/md_grey_100"
     app:cardCornerRadius="8dp"
     app:elevation="8dp">
 
@@ -31,11 +32,11 @@
             android:id="@+id/tv_admin_name_level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
+            android:layout_marginStart="12dp"
             android:fontFamily="sans-serif-medium"
             android:text="@string/admin_name_level"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/img_admin"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,7 +44,7 @@
             android:id="@+id/tv_profile_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
             android:fontFamily="sans-serif"
             android:text=""
@@ -56,7 +57,7 @@
             android:id="@+id/tv_profile_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="8dp"
             android:fontFamily="sans-serif"
             android:text=""
@@ -72,7 +73,8 @@
             android:src="@drawable/ic_dropdown"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/md_grey_600" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
