--- a/erp/src/main/res/values/themes.xml
+++ b/erp/src/main/res/values/themes.xml
@@ -14,9 +14,8 @@
         <!-- Customize your theme here. -->
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
 
-        <item name="materialDrawerStyle">@style/Widget.MaterialDrawerStyle</item>
-        <item name="materialDrawerHeaderStyle">@style/Widget.MaterialDrawerHeaderStyle</item>
-        <item name="windowActionModeOverlay">true</item>
+<!--        <item name="materialDrawerStyle">@style/Widget.MaterialDrawerStyle</item>-->
+<!--        <item name="materialDrawerHeaderStyle">@style/Widget.MaterialDrawerHeaderStyle</item>-->
 
     </style>
 
