[experimental] send photos to server

--- a/erp/src/main/res/layout/activity_edit_profile.xml
+++ b/erp/src/main/res/layout/activity_edit_profile.xml
@@ -55,7 +55,7 @@
             android:paddingBottom="32dp">
 
             <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/img_fish"
+                android:id="@+id/img_profile"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
