add level features (not yet finished)

--- a/erp/src/main/res/layout/bottom_sheet_level_action.xml
+++ b/erp/src/main/res/layout/bottom_sheet_level_action.xml
@@ -80,7 +80,7 @@
             app:layout_constraintTop_toBottomOf="@+id/ll_edit">
 
             <LinearLayout
-                android:id="@+id/ll_reset_login"
+                android:id="@+id/ll_edit_access"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
