--- a/erp/src/main/res/layout/bottom_sheet_level_add.xml
+++ b/erp/src/main/res/layout/bottom_sheet_level_add.xml
@@ -39,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/white"
-                android:hint="Nama Level"
+                android:hint="@string/level_name"
                 android:inputType="text" />
 
         </com.google.android.material.textfield.TextInputLayout>
