finish level features

--- a/erp/src/main/res/layout/activity_customer.xml
+++ b/erp/src/main/res/layout/activity_customer.xml
@@ -13,7 +13,7 @@
         android:layout_marginHorizontal="24dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/rv_level"
+        app:layout_constraintBottom_toTopOf="@+id/rv_customer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
