--- a/erp/src/main/res/layout/bottom_sheet_level_action.xml
+++ b/erp/src/main/res/layout/bottom_sheet_level_action.xml
@@ -80,7 +80,7 @@
             app:layout_constraintTop_toBottomOf="@+id/ll_edit">
 
             <LinearLayout
-                android:id="@+id/ll_edit_access"
+                android:id="@+id/ll_show_access"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
@@ -117,7 +117,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
-                    android:text="@string/level_edit_access"
+                    android:text="@string/level_show_access"
                     android:textColor="@color/white"
                     android:textSize="18sp" />
 
