--- a/erp/src/main/res/layout/activity_customer.xml
+++ b/erp/src/main/res/layout/activity_customer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".master_design.CustomerActivity">
+    tools:context=".master_design.customer.CustomerActivity">
 
     <LinearLayout
         android:id="@+id/ll_header"
