--- a/erp/src/main/res/layout/item_admin.xml
+++ b/erp/src/main/res/layout/item_admin.xml
@@ -41,24 +41,37 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_profile_email"
+            android:id="@+id/tv_profile_department"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
-            android:text=""
+            android:text="@string/admin_department"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/img_admin"
             app:layout_constraintTop_toBottomOf="@+id/tv_admin_name_level" />
 
         <TextView
+            android:id="@+id/tv_profile_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="4dp"
+            android:fontFamily="sans-serif"
+            android:text=""
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@+id/img_admin"
+            app:layout_constraintTop_toBottomOf="@+id/tv_profile_department" />
+
+        <TextView
             android:id="@+id/tv_profile_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
             android:text=""
             android:textColor="@color/black"
