feat: get list customer [finished]

--- a/erp/src/main/res/layout/activity_customer.xml
+++ b/erp/src/main/res/layout/activity_customer.xml
@@ -76,18 +76,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/rv_customer" />
 
-    <com.github.clans.fab.FloatingActionButton
-        android:id="@+id/fab_add_customer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:src="@drawable/ic_add"
-        app:fab_colorNormal="@color/secondaryColor"
-        app:fab_colorPressed="@color/secondaryDarkColor"
-        app:fab_colorRipple="@color/secondaryColor"
-        app:fab_label="@string/add_new_level"
-        app:fab_size="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+<!--    <com.github.clans.fab.FloatingActionButton-->
+<!--        android:id="@+id/fab_add_customer"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="12dp"-->
+<!--        android:src="@drawable/ic_add"-->
+<!--        app:fab_colorNormal="@color/secondaryColor"-->
+<!--        app:fab_colorPressed="@color/secondaryDarkColor"-->
+<!--        app:fab_colorRipple="@color/secondaryColor"-->
+<!--        app:fab_label="@string/add_new_level"-->
+<!--        app:fab_size="normal"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
