fix(additional layout): change name from additional_customer to additional

--- a/erp/src/main/res/layout/item_customer.xml
+++ b/erp/src/main/res/layout/item_customer.xml
@@ -74,7 +74,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_additional_text"
-            tools:listitem="@layout/item_customer_additional" />
+            tools:listitem="@layout/item_additional" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
