--- a/erp/src/main/res/layout/item_supplier.xml
+++ b/erp/src/main/res/layout/item_supplier.xml
@@ -17,7 +17,7 @@
         android:padding="12dp">
 
         <TextView
-            android:id="@+id/tv_customer_name"
+            android:id="@+id/tv_supplier_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_customer_address"
+            android:id="@+id/tv_supplier_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -37,10 +37,10 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_customer_name" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_supplier_name" />
 
         <TextView
-            android:id="@+id/tv_customer_phone"
+            android:id="@+id/tv_supplier_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -49,7 +49,19 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_customer_address" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_supplier_address" />
+
+        <TextView
+            android:id="@+id/tv_supplier_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="sans-serif"
+            android:text="@string/supplier_type"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_supplier_phone" />
 
         <TextView
             android:id="@+id/tv_additional_text"
@@ -62,7 +74,7 @@
             android:textSize="16sp"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_customer_phone" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_supplier_type" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_additional"
